styles.css
html {
	text-align: center;
	background-image: url("static/background.jpg");
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center bottom;
	min-height: 100vh;
}

@media (orientation: landscape) {
	html {
		background-size: 100vw auto;
	}
}

@media (orientation: portrait) {
	html {
		background-size: auto 100vh;
	}
}

h1 {
	color: #eaeaea;
	font-family: "Otomanopee One", sans-serif;
	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
}

a {
	outline: none;
	text-decoration: underline;
	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
	padding: 2px 1px 0;
	color: #eaeaea;
	font-family: "Otomanopee One", sans-serif;
}

a:hover {
	color: #555168;
}

img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	border-radius: 0.2rem;
	width: 15rem;
	height: auto;
	box-shadow: rgba(84, 78, 99, 0.4) 0px 5px, rgba(84, 78, 99, 0.3) 0px 10px,
		rgba(84, 78, 99, 0.2) 0px 15px, rgba(84, 78, 99, 0.1) 0px 20px, rgba(84, 78, 99, 0.05) 0px 25px;
	position: relative;
	margin-top: 2rem;
}

